--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body style="    background-image: linear-gradient(
+  20deg
+  , #08aeea 0%, #2af598 100%);
+      font-family: 'Open Sans', Arial, Helvetica, Sans-serif, Verdana, Tahoma;">
   <app-root></app-root>
 </body>
 </html>
